# lockframe

./: Cargo.toml  README.md  clippy.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  nightly-fuzz.yml  release.yml
crates/kalandra-client/src/: client.rs
crates/kalandra-core/: Cargo.toml
crates/kalandra-core/src/: lib.rs  room_manager.rs  sequencer.rs
crates/kalandra-core/src/mls/: error.rs  group.rs  provider.rs  state.rs  validator.rs
crates/kalandra-core/src/sender_keys/: derivation.rs  encryption.rs  error.rs  mod.rs  ratchet.rs
crates/kalandra-core/src/server/: driver.rs  error.rs  executor.rs  mod.rs  registry.rs
crates/kalandra-core/src/storage/: error.rs  memory.rs  mod.rs
crates/kalandra-core/tests/: chaos_sequencer.rs  chaos_storage.rs  room_manager_properties.rs  room_manager_test.rs  sender_keys_properties.rs
crates/kalandra-harness/: Cargo.toml
crates/kalandra-harness/src/: lib.rs  sim_server.rs
crates/kalandra-harness/tests/: server_basic_test.rs  server_broadcast_test.rs
crates/kalandra-proto/src/: header.rs
crates/kalandra-server/src/: lib.rs  transport.rs
crates/lockframe-app/: Cargo.toml
crates/lockframe-app/src/: action.rs  app.rs  bridge.rs  driver.rs  event.rs  input.rs  lib.rs  runtime.rs  state.rs
crates/lockframe-app/tests/: app_integration_test.rs  app_properties.rs
crates/lockframe-client/: Cargo.toml
crates/lockframe-client/src/: client.rs  event.rs  lib.rs  sender_key_store.rs  transport.rs
crates/lockframe-client/tests/: client_e2e_test.rs  external_join_test.rs  model_equivilence_test.rs  transport_integration.rs  transport_integration_test.rs
crates/lockframe-core/: Cargo.toml
crates/lockframe-core/src/: connection.rs  env.rs  error.rs
crates/lockframe-core/src/mls/: constants.rs  group.rs  mod.rs  provider.rs  state.rs  validator.rs
crates/lockframe-core/tests/: chaos_connection.rs  connection_properties.rs  frame_snapshots.rs  mls_group_properties.rs
crates/lockframe-crypto/: Cargo.toml
crates/lockframe-crypto/src/: lib.rs
crates/lockframe-crypto/src/sender_keys/: derivation.rs  encryption.rs  ratchet.rs
crates/lockframe-crypto/tests/: sender_keys_properties.rs
crates/lockframe-harness/: Cargo.toml
crates/lockframe-harness/src/: cluster.rs  lib.rs  sim_driver.rs  sim_env.rs  sim_server.rs  sim_transport.rs
crates/lockframe-harness/src/invariants/: checks.rs  mod.rs  snapshot.rs
crates/lockframe-harness/src/model/: client.rs  operation.rs  server.rs  world.rs
crates/lockframe-harness/src/scenario/: actor.rs  builder.rs  oracle.rs  world.rs
crates/lockframe-harness/tests/: app_properties.rs  chaos_network_test.rs  cluster_convergence_test.proptest-regressions  cluster_convergence_test.rs  external_join_test.rs  mls_group_test.rs  model_based_test.proptest-regressions  model_based_test.rs  optimality_test.rs  server_external_join_test.rs  tui_behavior_test.rs
crates/lockframe-proto/src/: errors.rs  frame.rs  header.rs  opcodes.rs
crates/lockframe-proto/src/payloads/: app.rs  mls.rs  mod.rs
crates/lockframe-proto/tests/: frame_properties.rs  frame_snapshots.rs
crates/lockframe-server/: Cargo.toml
crates/lockframe-server/src/: driver.rs  error.rs  key_package_registry.rs  lib.rs  main.rs  registry.rs  room_manager.rs  sequencer.rs  server_error.rs  system_env.rs  transport.rs
crates/lockframe-server/src/storage/: chaotic.rs  error.rs  memory.rs  mod.rs  redb.rs
crates/lockframe-server/tests/: add_member_routing_test.rs  chaos_sequencer.rs  chaos_storage.rs  crash_recovery.rs  keypackage_flow_test.rs  room_manager_properties.rs  room_manager_test.rs  sequencer_test.rs  server_external_join_test.rs
crates/lockframe-tui/: Cargo.toml
crates/lockframe-tui/src/: bridge.rs  input.rs  lib.rs  main.rs  runtime.rs  server.rs  terminal.rs
crates/lockframe-tui/src/app/: action.rs  event.rs  mod.rs  state.rs
crates/lockframe-tui/src/ui/: chat.rs  input.rs  mod.rs  rooms.rs  status.rs
crates/sunder-core/: Cargo.toml
crates/sunder-core/src/: connection.rs  error.rs  lib.rs
crates/sunder-core/src/mls/: error.rs  group.rs  mod.rs
crates/sunder-core/tests/: connection_properties.rs  frame_snapshots.rs
crates/sunder-core/tests/snapshots/: frame_snapshots__snapshot_ban_frame.snap  frame_snapshots__snapshot_ban_frame_permanent.snap  frame_snapshots__snapshot_commit_frame.snap  frame_snapshots__snapshot_encrypted_message_frame.snap  frame_snapshots__snapshot_error_frame.snap  frame_snapshots__snapshot_error_frame_with_retry.snap  frame_snapshots__snapshot_goodbye_frame.snap  frame_snapshots__snapshot_hello_frame.snap  frame_snapshots__snapshot_hello_frame_with_auth_token.snap  frame_snapshots__snapshot_hello_frame_with_capabilities.snap  frame_snapshots__snapshot_hello_reply_frame.snap  frame_snapshots__snapshot_hello_reply_frame_with_challenge.snap  frame_snapshots__snapshot_key_package_frame.snap  frame_snapshots__snapshot_kick_frame.snap  frame_snapshots__snapshot_ping_frame.snap  frame_snapshots__snapshot_pong_frame.snap  frame_snapshots__snapshot_proposal_frame.snap  frame_snapshots__snapshot_reaction_frame.snap  frame_snapshots__snapshot_receipt_frame.snap  frame_snapshots__snapshot_redact_frame.snap  frame_snapshots__snapshot_welcome_frame.snap
crates/sunder-harness/src/: lib.rs  sim_env.rs
crates/sunder-harness/tests/: connection_lifecycle_test.rs  mls_group_test.rs  scenario_timeout_test.rs
docs/: ARCHITECTURE.md  CLIENT.md  PROTOCOL.md  ROADMAP.md  SERVER.md  clippy-analysis.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cbor_attack_fuzzer.rs  e2e_pipeline_fuzzer.rs  frame_boundary_fuzzer.rs  frame_decode.rs  mls_signature_fuzzer.rs  payload_decode.rs  room_manager_fuzzer.rs  sender_key_fuzzer.rs  sequencer_invalid.rs  sequencer_state_fuzzer.rs  storage_chaos_fuzzer.rs
