[workspace]
members = ["crates/*"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.93"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
warnings = "deny"

[workspace.lints.clippy]
# Default to strict linting; individual lints opt out explicitly
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Use invariant assertions
as_conversions = "allow"
arithmetic_side_effects = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# Noise-heavy or stylistic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
unused_self = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
similar_names = "allow"
needless_range_loop = "allow"
upper_case_acronyms = "allow"

# Footguns
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
wildcard_imports = "deny"
todo = "deny"
unimplemented = "deny"

# Prevent async std::sync::Mutex deadlocks
await_holding_lock = "deny"

# clippy.toml
disallowed_methods = "deny"
disallowed_macros = "deny"
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"

[profile.dev]
opt-level = 0
debug = true
incremental = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "thin"
debug = false
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true

[profile.bench]
inherits = "release"
debug = true

[package]
name = "lockframe-workspace"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# TODO: use workspace-wide dependencies instead

[dev-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["user-hooks"] }
