[package]
name = "lockframe-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4", features = ["derive"] }

lockframe-server = { path = "../crates/lockframe-server" }
lockframe-proto = { path = "../crates/lockframe-proto" }
lockframe-core = { path = "../crates/lockframe-core" }

bytes = "1.11"
ed25519-dalek = "2"

[[bin]]
name = "mls_signature_fuzzer"
path = "fuzz_targets/mls_signature_fuzzer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "connection_state_fuzzer"
path = "fuzz_targets/connection_state_fuzzer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frame_boundary_fuzzer"
path = "fuzz_targets/frame_boundary_fuzzer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "room_manager_fuzzer"
path = "fuzz_targets/room_manager_fuzzer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sequencer_state_fuzzer"
path = "fuzz_targets/sequencer_state_fuzzer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cbor_attack_fuzzer"
path = "fuzz_targets/cbor_attack_fuzzer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "e2e_pipeline_fuzzer"
path = "fuzz_targets/e2e_pipeline_fuzzer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "storage_chaos_fuzzer"
path = "fuzz_targets/storage_chaos_fuzzer.rs"
test = false
doc = false
bench = false
