[package]
name = "lockframe-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Action-based client state machine for Lockframe protocol"

[dependencies]
lockframe-core = { path = "../lockframe-core" }
lockframe-crypto = { path = "../lockframe-crypto" }
lockframe-proto = { path = "../lockframe-proto" }

# CBOR serialization
ciborium = "0.2"

# Error handling
thiserror = "2.0"

# QUIC transport (optional, for production use)
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
tokio = { version = "1", features = ["sync", "rt"], optional = true }
bytes = { version = "1.9", optional = true }
zerocopy = { version = "0.8", optional = true }

[features]
default = []
transport = ["quinn", "rustls", "tokio", "bytes", "zerocopy"]

[dev-dependencies]
# Property-based testing
proptest = "1.5"

[lints]
workspace = true
