[package]
name = "lockframe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lockframe-proto = { path = "../lockframe-proto" }

# Serialization (for storage)
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
bytes = "1.11"

# Async traits (no runtime dependency)
async-trait = "0.1"

# Time and duration
tokio = { version = "1", default-features = false, features = ["io-util", "time"] }

# Error handling
thiserror = "2.0"

# MLS (Messaging Layer Security)
openmls = { version = "0.7", features = ["test-utils"] }
openmls_traits = "0.4"
openmls_rust_crypto = "0.4"
openmls_basic_credential = "0.4"
openmls_memory_storage = "0.4"
rand = "0.8"

# Ed25519 signatures for frame authentication
ed25519-dalek = { version = "2.1", features = ["serde"] }
tls_codec = "0.4.2"

[dev-dependencies]
# Property-based testing
proptest = "1.5"

# Snapshot testing
insta = "1.41"
hex = "0.4"

# Simulation harness for deterministic tests
lockframe-harness = { path = "../lockframe-harness" }
turmoil = "0.7"

[lints]
workspace = true
