[package]
name = "lockframe-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cryptographic primitives for Lockframe protocol"

[dependencies]
# Cryptographic primitives for Sender Keys
chacha20poly1305 = "0.10"  # XChaCha20-Poly1305 AEAD
hkdf = "0.12"              # HKDF key derivation
sha2 = "0.10"              # SHA-256 for HMAC
hmac = "0.12"              # HMAC for ratchet
zeroize = "1.8"            # Secure memory zeroing

# Error handling
thiserror = "2.0"

[dev-dependencies]
# Property-based testing
proptest = "1.5"

[lints]
workspace = true
