[package]
name = "lockframe-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lockframe-app = { path = "../lockframe-app" }
lockframe-client = { path = "../lockframe-client" }
lockframe-core = { path = "../lockframe-core" }
lockframe-proto = { path = "../lockframe-proto" }
lockframe-server = { path = "../lockframe-server" }

# Async trait support
async-trait = "0.1"

# Deterministic simulation
turmoil = "0.7.0"

# Async runtime (minimal features, turmoil provides the runtime)
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "time"] }

# Seeded RNG for determinism
rand = "0.8"
rand_chacha = "0.3"

# For model-based testing operations
arbitrary = { version = "1.4", features = ["derive"] }

# Logging
tracing = "0.1"

# Serialization (for snapshot testing)
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# Client for E2E tests
lockframe-client = { path = "../lockframe-client" }

# For test assertions
bytes = "1.9"

# Property-based testing
proptest = "1.5"

# Snapshot testing
insta = { version = "1.46.0", features = ["json", "redactions"] }

[lints]
workspace = true
