[package]
name = "lockframe-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Minimal TUI for protocol verification"

[[bin]]
name = "lockframe-tui"
path = "src/main.rs"

[dependencies]
lockframe-app = { path = "../lockframe-app" }
lockframe-client = { path = "../lockframe-client", features = ["transport"] }
lockframe-core = { path = "../lockframe-core" }
lockframe-proto = { path = "../lockframe-proto" }
lockframe-server = { path = "../lockframe-server" }

# TUI framework
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Randomness
rand = "0.9"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Snapshot testing
insta = "1.41"

[lints]
workspace = true
